--- a/idf_component.yml
+++ b/idf_component.yml
@@ -1,8 +1,11 @@
-version: "0.9.2"
+version: "0.9.3"
 description: MAX32664 Hub library for ESP-IDF
 url: https://github.com/franzbischoff/esp-idf-max32664-hub
 files:
   exclude:
     - ".whitesource"
-dependencies:
+    - ".clang-format"
+    - ".clang-tidy"
+    - ".editorconfig"
+  dependencies:
   idf: ">=4.1.0"
