--- a/max32664-hub/CMakeLists.txt
+++ b/max32664-hub/CMakeLists.txt
@@ -1,9 +1,8 @@
 idf_component_register(
-    SRCS "max32664.cpp"
+    SRCS
     INCLUDE_DIRS "include"
     REQUIRES "driver"
 )
-
 set_source_files_properties(
     "max32664.cpp"
     PROPERTIES COMPILE_FLAGS "-std=c++14"
