--- a/max32664-hub/examples/basic/CMakeLists.txt
+++ b/max32664-hub/examples/basic/CMakeLists.txt
@@ -1,3 +1,4 @@
 cmake_minimum_required(VERSION 3.5)
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
+set(ENV{IDF_TOOLCHAIN} clang)
 project(max32664_hub_example)
