--- a/max32664-hub/examples/basic/main/CMakeLists.txt
+++ b/max32664-hub/examples/basic/main/CMakeLists.txt
@@ -1,8 +1,4 @@
 idf_component_register(
     SRCS "main.cpp"
+    REQUIRES "driver"
 )
-
-# set_source_files_properties(
-#     "main.cpp"
-#     PROPERTIES COMPILE_FLAGS "-std=c++14"
-# )
