--- a/.editorconfig
+++ b/.editorconfig
@@ -19,6 +19,11 @@ max_line_length = 120
 [{*.md,*.rst}]
 trim_trailing_whitespace = false
 
+[{Dockerfile.*}]
+indent_style = space
+indent_size = 2
+max_line_length = 120
+
 [{Kconfig}]
 indent_style = space
 indent_size = 4
