--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -23,7 +23,7 @@ on:
 
 jobs:
   build-component:
-    timeout-minutes: 5
+    timeout-minutes: 20
     strategy:
       fail-fast: false
       matrix:
@@ -37,18 +37,18 @@ jobs:
             "latest",
           ]
         idf_target: ["esp32"]
-        include:
-          - idf_ver: "release-v4.2"
-            idf_target: esp32s2
-          - idf_ver: "release-v4.3"
-            idf_target: esp32c3
-          - idf_ver: "release-v4.4"
-            idf_target: esp32s3
+        # include:
+        #   - idf_ver: "release-v4.2"
+        #     idf_target: esp32s2
+        #   - idf_ver: "release-v4.3"
+        #     idf_target: esp32c3
+        #   - idf_ver: "release-v4.4"
+        #     idf_target: esp32s3
     runs-on: ubuntu-latest
-    permissions:
-      actions: read
-      contents: read
-      security-events: write
+    # permissions:
+    #   actions: read
+    #   contents: read
+    #   security-events: write
     container: espressif/idf:${{ matrix.idf_ver }}
     steps:
       - name: Update git
@@ -73,6 +73,7 @@ jobs:
         # queries: security-extended,security-and-quality
       - name: Build for ESP32
         env:
+          PLATFORM: linux
           IDF_TARGET: ${{ matrix.idf_target }}
         shell: bash
         run: |
