--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,32 +7,33 @@
   },
   // Add the IDs of extensions you want installed when the container is created.
   "extensions": [
-	"ms-vscode.cpptools",
-	"espressif.esp-idf-extension",
-	"ms-vscode.cmake-tools",
-	"GitHub.copilot-labs",
-	"GitHub.copilot-nightly",
-	"spywhere.guides",
-	"natqe.reload",
-	"mutantdino.resourcemonitor",
-	"ExecutableBookProject.myst-highlight",
-	"ms-dotnettools.vscode-dotnet-runtime",
-	"chiehyu.vscode-astyle",
-	"cschlosser.doxdocgen",
-	"richie5um2.vscode-sort-json",
-	"redhat.vscode-yaml",
-	"qcz.text-power-tools",
-	"PascalReitermann93.vscode-yaml-sort",
-	"twxs.cmake",
-	"josetr.cmake-language-support-vscode",
-	"gerane.Theme-Twilight",
-	"usernamehw.errorlens",
-	"emilast.LogFileHighlighter",
-	"PKief.material-icon-theme",
-	"IBM.output-colorizer",
-	"trunk.io",
-	"EditorConfig.EditorConfig"
-],
+    "ms-vscode.cpptools",
+    "espressif.esp-idf-extension",
+    "ms-vscode.cmake-tools",
+    "GitHub.copilot-labs",
+    "GitHub.copilot-nightly",
+    "spywhere.guides",
+    "natqe.reload",
+    "mutantdino.resourcemonitor",
+    "ExecutableBookProject.myst-highlight",
+    "ms-dotnettools.vscode-dotnet-runtime",
+    "chiehyu.vscode-astyle",
+    "cschlosser.doxdocgen",
+    "richie5um2.vscode-sort-json",
+    "redhat.vscode-yaml",
+    "qcz.text-power-tools",
+    "PascalReitermann93.vscode-yaml-sort",
+    "twxs.cmake",
+    "josetr.cmake-language-support-vscode",
+    "gerane.Theme-Twilight",
+    "usernamehw.errorlens",
+    "emilast.LogFileHighlighter",
+    "PKief.material-icon-theme",
+    "IBM.output-colorizer",
+    "trunk.io",
+    "EditorConfig.EditorConfig",
+    "microhobby.linuxkerneldev"
+  ],
   "workspaceMount": "source=${localWorkspaceFolder},target=/workspaces,type=bind",
   /* the path of workspace folder to be opened after container is running
    */
