--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -1,25 +1,25 @@
-# For most projects, this workflow file will not need changing; you simply need
-# to commit it to your repository.
-#
-# You may wish to alter this file to override the set of languages analyzed,
-# or to provide custom queries or build logic.
-#
-# ******** NOTE ********
-# We have attempted to detect the languages in your repository. Please check
-# the `language` matrix defined below to confirm you have the correct set of
-# supported CodeQL languages.
-#
-name: "CodeQL"
+name: CodeQL
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - develop
   pull_request:
     # The branches below must be a subset of the branches above
-    branches: [ "main" ]
+    branches:
+      - develop
 
   workflow_dispatch:
-
+    inputs:
+      logLevel:
+        description: Log level
+        required: true
+        default: warning
+        type: choice
+        options:
+          - info
+          - warning
+          - debug
 
 jobs:
   build-component:
@@ -27,16 +27,15 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        idf_ver:
-          [
+        idf_ver: [
             # "release-v4.1",
             # "release-v4.2",
-            "release-v4.3",
+            release-v4.3,
             # "release-v4.4", # works
             # "release-v5.0",
             # "latest",
           ]
-        idf_target: ["esp32"]
+        idf_target: [esp32]
         # include:
         #   - idf_ver: "release-v4.2"
         #     idf_target: esp32s2
@@ -51,6 +50,7 @@ jobs:
       security-events: write
     container: espressif/idf:${{ matrix.idf_ver }}
     steps:
+      # Update git to latest version
       - name: Update git
         run: |
           export DEBIAN_FRONTEND=noninteractive
@@ -59,18 +59,17 @@ jobs:
           add-apt-repository -y ppa:git-core/ppa
           apt update
           apt install -y git
-      - uses: actions/checkout@v3
+      # Checkout the repository
+      - name: Checkout repository
+        uses: actions/checkout@v3
       # Initializes the CodeQL tools for scanning.
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v2
         with:
-          languages: ${{ matrix.language }}
-        # If you wish to specify custom queries, you can do so here or in a config file.
-        # By default, queries listed here will override any specified in a config file.
-        # Prefix the list here with "+" to use these queries and those in the config file.
+          languages: cpp
 
-        # Details on CodeQL's query packs refer to : https://docs.github.com/en/code-security/code-scanning/automatically-scanning-your-code-for-vulnerabilities-and-errors/configuring-code-scanning#using-queries-in-ql-packs
-        # queries: security-extended,security-and-quality
+      # ℹ️ Command-line programs to run using the OS shell.
+      # 📚 See https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#jobsjob_idstepsrun
       - name: Build for ESP32
         env:
           PLATFORM: linux64
@@ -80,9 +79,7 @@ jobs:
           . ${IDF_PATH}/export.sh
           cd max32664-hub/examples/basic
           idf.py build
+
+      # Performs a CodeQL analysis.
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v2
-        with:
-          category: "/language:${{matrix.language}}"
-
-
