--- a/.github/workflows/commit_component.yaml
+++ b/.github/workflows/commit_component.yaml
@@ -1,19 +1,21 @@
 name: Push component to https://components.espressif.com
 on:
   push:
+    branches:
+      - main
     tags:
       - v*
 jobs:
   upload_components:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
-          submodules: "recursive"
+          submodules: recursive
 
       - name: Upload component to the component registry
         uses: espressif/upload-components-ci-action@v1
         with:
-          directories: "max32664-hub"
-          namespace: "franzbischoff"
+          directories: max32664-hub
+          namespace: franzbischoff
           api_token: ${{ secrets.IDF_COMPONENT_API_TOKEN }}
