--- a/.trunk/config/.markdownlint.yaml
+++ b/.trunk/config/.markdownlint.yaml
@@ -1,11 +1,12 @@
 # Autoformatter friendly markdownlint config (all formatting rules disabled)
-# trunk-ignore(yamllint/document-start)
 default: true
-blank_lines: false
-bullet: false
-html: false
-indentation: false
-line_length: false
-spaces: false
-url: false
-whitespace: false
+blank_lines: true
+bullet: true
+html: true
+indentation: true
+line_length: true
+MD013:
+  line_length: 120
+spaces: true
+url: true
+whitespace: true
