--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -1,7 +1,6 @@
-# trunk-ignore(yamllint/document-start)
 version: 0.1
 cli:
-  version: 1.0.1
+  version: 1.1.0
 plugins:
   sources:
     - id: trunk
@@ -10,6 +9,9 @@ plugins:
 lint:
   compile_commands: json
   enabled:
+    - semgrep@0.121.2
+    - include-what-you-use@0.18
+    - stylelint@14.15.0
     - yamllint@1.28.0
     - actionlint@1.6.22
     - prettier@2.7.1
@@ -19,12 +21,19 @@ lint:
     - gitleaks@8.15.0
     - markdownlint@0.32.2
     - git-diff-check
+  ignore:
+    - linters: [prettier]
+      paths:
+        # half-html
+        - docs/*/header.html
 runtimes:
   enabled:
+    - python@3.10.3
     - go@1.18.3
     - node@16.14.2
 actions:
   enabled:
-    - trunk-upgrade
-    - trunk-check-upgrade
+    - trunk-announce
+    - trunk-check-pre-push
+    - trunk-fmt-pre-commit
     - trunk-upgrade-available
