--- a/max32664-hub/examples/basic/main/idf_component.yml
+++ b/max32664-hub/examples/basic/main/idf_component.yml
@@ -1,8 +1,7 @@
-# trunk-ignore(yamllint/document-start)
-version: "0.9.0"
-description: "The first basic example"
+version: 0.9.0
+description: The first basic example
 dependencies:
   idf: ">=4.1.0"
   franzbischoff/max32664-hub:
     version: ">=0.9.3"
-    override_path: "../../../"
+    override_path: ../../../
