--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -27,22 +27,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        idf_ver: [
-            # "release-v4.1",
-            # "release-v4.2",
-            release-v4.3,
-            # "release-v4.4", # works
-            # "release-v5.0",
-            # "latest",
-          ]
-        idf_target: [esp32]
-        # include:
-        #   - idf_ver: "release-v4.2"
-        #     idf_target: esp32s2
-        #   - idf_ver: "release-v4.3"
-        #     idf_target: esp32c3
-        #   - idf_ver: "release-v4.4"
-        #     idf_target: esp32s3
+        idf_ver: [release-v4.4, release-v5.0, latest]
+        idf_target: [esp32, esp32s2, esp32c3, esp32s3]
     runs-on: ubuntu-latest
     permissions:
       actions: read
