--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -3,6 +3,7 @@ name: CodeQL
 on:
   push:
     branches:
+      - main
       - develop
   pull_request:
     # The branches below must be a subset of the branches above
