--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,41 +4,64 @@
   "name": "ESP-IDF QEMU",
   "build": {
     "dockerfile": "Dockerfile",
-    "target": "build-50"
+    "target": "build-51"
   },
-  // Add the IDs of extensions you want installed when the container is created.
-  "extensions": [
-    "ms-vscode.cpptools",
-    "espressif.esp-idf-extension",
-    "ms-vscode.cmake-tools",
-    "GitHub.copilot-labs",
-    "GitHub.copilot-nightly",
-    "spywhere.guides",
-    "natqe.reload",
-    "mutantdino.resourcemonitor",
-    "ExecutableBookProject.myst-highlight",
-    "ms-dotnettools.vscode-dotnet-runtime",
-    "chiehyu.vscode-astyle",
-    "cschlosser.doxdocgen",
-    "richie5um2.vscode-sort-json",
-    "redhat.vscode-yaml",
-    "qcz.text-power-tools",
-    "PascalReitermann93.vscode-yaml-sort",
-    "twxs.cmake",
-    "josetr.cmake-language-support-vscode",
-    "gerane.Theme-Twilight",
-    "usernamehw.errorlens",
-    "emilast.LogFileHighlighter",
-    "PKief.material-icon-theme",
-    "IBM.output-colorizer",
-    "trunk.io",
-    "EditorConfig.EditorConfig",
-    "microhobby.linuxkerneldev",
-    "remcohaszing.schemastore",
-    "betwo.vscode-doxygen-runner",
-    "Serhioromano.vscode-gitflow",
-    "marvhen.reflow-markdown"
-  ],
+  "customizations": {
+    "vscode": {
+      // Add the IDs of extensions you want installed when the container is created.
+      "extensions": [
+        "ms-vscode.cpptools",
+        "espressif.esp-idf-extension",
+        "ms-vscode.cmake-tools",
+        "GitHub.copilot-labs",
+        "GitHub.copilot-nightly",
+        "spywhere.guides",
+        "natqe.reload",
+        "mutantdino.resourcemonitor",
+        "ExecutableBookProject.myst-highlight",
+        "ms-dotnettools.vscode-dotnet-runtime",
+        "chiehyu.vscode-astyle",
+        "cschlosser.doxdocgen",
+        "richie5um2.vscode-sort-json",
+        "redhat.vscode-yaml",
+        "qcz.text-power-tools",
+        "PascalReitermann93.vscode-yaml-sort",
+        "twxs.cmake",
+        "josetr.cmake-language-support-vscode",
+        "gerane.Theme-Twilight",
+        "usernamehw.errorlens",
+        "emilast.LogFileHighlighter",
+        "PKief.material-icon-theme",
+        "IBM.output-colorizer",
+        "trunk.io",
+        "EditorConfig.EditorConfig",
+        "microhobby.linuxkerneldev",
+        "remcohaszing.schemastore",
+        "betwo.vscode-doxygen-runner",
+        "Serhioromano.vscode-gitflow",
+        "marvhen.reflow-markdown"
+      ],
+      "settings": {
+        "terminal.integrated.defaultProfile.linux": "bash",
+        "idf.espIdfPath": "/opt/esp/idf",
+        "idf.useIDFKconfigStyle": true,
+        "idf.saveScope": 2,
+        "idf.customExtraPaths": "",
+        "idf.pythonBinPath": "/opt/esp/python_env/idf5.1_py3.8_env/bin/python",
+        "idf.toolsPath": "/opt/esp",
+        "idf.gitPath": "/usr/bin/git",
+        "idf.adapterTargetName": "esp32",
+        "idf.openOcdConfigs": [
+          "board/esp32-wrover-kit-1.8v.cfg",
+          "target/esp32.cfg"
+        ],
+        "C_Cpp.intelliSenseEngineFallback": "enabled",
+        "C_Cpp.clang_format_fallbackStyle": "llvm",
+        "C_Cpp.clang_format_sortIncludes": false,
+        "C_Cpp.formatting": "clangFormat"
+      }
+    }
+  },
   "workspaceMount": "source=${localWorkspaceFolder},target=/workspaces,type=bind",
   /* the path of workspace folder to be opened after container is running
    */
@@ -50,24 +73,6 @@
     "IDF_CMAKE_WARN_UNINITIALIZED": "TRUE",
     "IDF_MAINTAINER": "1"
   },
-  "settings": {
-    "terminal.integrated.defaultProfile.linux": "bash",
-    "idf.espIdfPath": "/opt/esp/idf",
-    "idf.useIDFKconfigStyle": true,
-    "idf.saveScope": 2,
-    "idf.customExtraPaths": "",
-    "idf.pythonBinPath": "/opt/esp/python_env/idf4.3_py3.6_env/bin/python",
-    "idf.toolsPath": "/opt/esp",
-    "idf.gitPath": "/usr/bin/git",
-    "idf.adapterTargetName": "esp32",
-    "idf.openOcdConfigs": [
-      "board/esp32-wrover-kit-1.8v.cfg",
-      "target/esp32.cfg"
-    ],
-    "C_Cpp.intelliSenseEngineFallback": "Enabled",
-    "C_Cpp.clang_format_fallbackStyle": "llvm",
-    "C_Cpp.clang_format_sortIncludes": false,
-    "C_Cpp.formatting": "clangFormat"
-  },
   "runArgs": ["--privileged"]
+  // "postAttachCommand": "git config --global --unset-all gpg.program"
 }
