--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -28,7 +28,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        idf_ver: [release-v4.4, release-v5.0, latest]
+        idf_ver: [release-v5.1, latest]
         idf_target: [esp32, esp32s2, esp32c3, esp32s3]
     runs-on: ubuntu-latest
     permissions:
