--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -53,7 +53,7 @@ jobs:
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v2
         with:
-          languages: cpp
+          languages: c-cpp
 
       # ℹ️ Command-line programs to run using the OS shell.
       # 📚 See https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#jobsjob_idstepsrun
@@ -70,3 +70,5 @@ jobs:
       # Performs a CodeQL analysis.
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v2
+        with:
+          container: "/language:c-cpp"
